--- a/Football-Predictions/Views/Shared/_Layout.cshtml
+++ b/Football-Predictions/Views/Shared/_Layout.cshtml
@@ -9,7 +9,24 @@
     <link rel="stylesheet" href="~/Football_Predictions.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="#">Football Predictions</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Premier League</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/SerieA">Serie A</a>
+                </li>
+                <!-- Dodaj więcej linków tutaj, jeśli potrzebujesz -->
+            </ul>
+        </div>
+    </nav>
+    <div class="container" style="padding-top: 70px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
