--- a/Football-Predictions/Views/Home/Index.cshtml
+++ b/Football-Predictions/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Predictions</title>
     <style>
-        /* Ustawienie tła */
+        /* Set background */
         body {
             background: url("/Images/Premier-League.webp") no-repeat center center fixed;
             background-size: cover;
@@ -17,7 +17,7 @@
             font-family: Arial, sans-serif;
         }
 
-        /* Kontener formularza */
+        /* Form container */
         .container {
             background: rgba(255, 255, 255, 0.9);
             padding: 30px;
@@ -90,7 +90,7 @@
 </head>
 <body>
 
-    <!-- Kontener na formularz -->
+    <!-- Form container -->
     <div class="container">
         <h1>Premier League Predictions</h1>
 
